--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,6 @@ config.json
 /node.e x e
 *.js
 /webserver.njsproj
+/viewsfavicon.ico
+/querys/frm_DebugTestdaten1_Tanzrunde.qry
+/querys/frm_DebugTestdaten_Tanzrunde.qry
