Kein extra Start MK Spaltenanzeige 2 Beamer

--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,9 @@ config.json
 /querys/frm_DebugTestdaten_Tanzrunde.qry
 /package.json
 /Start.bat
+/views/Gäuboden Cup.jpg
+/views/logo.jpg
+/views/logo.jpg
+/views/Balance_01_1.jpg
+/views/Balance_01_6.jpg
+/views/Balance_01_7.jpg
